--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,29 @@ body {
   font-family: sans-serif;
   text-align: center;
 }
+
+nav ul li {
+  text-decoration: none;
+  list-style: none;
+  display: inline-block;
+  margin: 10px;
+  padding: 10px;
+}
+
+nav {
+  display: block;
+}
+
+a.active {
+  border: solid black;
+}
+
+a {
+  outline: none;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+  list-style: none;
+}
